Bug 164686 - PDF export fails silently with | character in filename
Summary: PDF export fails silently with | character in filename
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords:
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2025-01-13 13:41 UTC by anton
Modified: 2025-01-14 11:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description anton 2025-01-13 13:41:47 UTC
Trying to export the document to PDF with a | character in the filename results in no PDF exported and no error message.
Comment 1 Mike Kaganski 2025-01-13 14:08:20 UTC
Are you using LibreOffice dialogs (i.e., is 'Options->LibreOffice->General->Use LibreOffice dialogs' checked?)
Comment 2 anton 2025-01-13 14:13:18 UTC
That option is checked, yes.
Comment 3 Mike Kaganski 2025-01-13 15:24:36 UTC
Regression from commit 25a997c15d39fb30676a375df8ea4ce1ed2e1acd.
Comment 5 Commit Notification 2025-01-13 20:12:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/134a7533d51b134b28afbcd4b93a24552951903b

tdf#164686: Check filename validity in SvtFileDialog

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-01-13 20:12:43 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a9bf19d0d399c2aa5356927930335d7ceddf1aea

tdf#164686: drop the erroneous exclusion of pdf export

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-01-13 20:12:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12664b7ceaf1c96943fda3f7e604465b8d34a84c

tdf#164686: handle exceptions from UCBContentHelper::Exists

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-01-14 10:04:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a16d2d48db5f6e42736dc861b192eb9057cc5aae

tdf#164686: Check filename validity in SvtFileDialog

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-01-14 10:04:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/13f40ddddbc98a42410d6ad68d97eac5e0be2cec

tdf#164686: drop the erroneous exclusion of pdf export

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-01-14 11:16:22 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/67714c24d1f002f48dc00e29283e18e04d8644a0

tdf#164686: handle exceptions from UCBContentHelper::Exists

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.