tdf#164686: Check filename validity in SvtFileDialog

Handles '|', '<', '>', '"' in the filename.

Change-Id: Ic43bb3b08b1ccd48c691b7ca90f1fc65fed6f320
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180197
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180214